Transformed all files with css and a tiny bitta js

--- a/bbq-ribs.html
+++ b/bbq-ribs.html
@@ -11,7 +11,7 @@
     <img src="images/slow_cooker_bbq_ribs.webp">
     <h2>Description</h2>
     <p>An easy and delicious way to prepare tender barbecued ribs without the barbecue!</p>
-    <h2>Ingredients</h2>
+    <h2>Ingredient</h2>
     <ul>
         <li>4 pounds pork baby back ribs</li>
         <li>Salt and pepper to taste</li>
