Huge edits to all files

--- a/bbq-ribs.html
+++ b/bbq-ribs.html
@@ -7,30 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="top">Slow-Cooker BBQ Ribs</h1>
-    <img src="images/slow_cooker_bbq_ribs.webp">
-    <h2>Description</h2>
-    <p>An easy and delicious way to prepare tender barbecued ribs without the barbecue!</p>
-    <h2>Ingredient</h2>
-    <ul>
-        <li>4 pounds pork baby back ribs</li>
-        <li>Salt and pepper to taste</li>
-        <li>2 cups ketchup</li>
-        <li>1 cup chili sauce</li>
-        <li>&#xbd; cup chilli sauce</li>
-        <li>4 tablespoons vinegar</li>
-        <li>2 teaspoons dried oregano</li>
-        <li>2 teaspoons Worcestershire sauce</li>
-        <li>1 dash hot sauce</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 400 degrees F (200 degrees C).</li>
-        <li>Season ribs with salt and pepper. Place in a shallow baking pan. Brown in oven 15 minutes. Turn over, and brown another 15 minutes; drain fat.</li>
-        <li>In a medium bowl, mix together the ketchup, chili sauce, brown sugar, vinegar, oregano, Worcestershire sauce, hot sauce, and salt and pepper. Place ribs in slow cooker. Pour sauce over ribs, and turn to coat.</li>
-        <li>Cover, and cook on Low 6 to 8 hours, or until ribs are tender.</li>
-    </ol>
-    <a href="#top">Go back to top</a>
-    <a href="index.html">Back to homepage</a>
+    <h1 class="recipe-page-name-text">Recipes</h1>
+    <div class="recipe-info-container">
+        <h1>BBQ Ribs</h1>
+        <img src="images/bbq_ribs.webp" class="recipe-page-img">
+        <h2>Description</h2>
+        <p>An easy and delicious way to prepare tender barbecued ribs without the barbecue!</p>
+        <h2>Ingridients</h2>
+        <ul>
+            <li>4 pounds pork baby back ribs</li>
+            <li>salt and pepper to taste</li>
+            <li>2 cups ketchup</li>
+            <li>1 cup chili sauce</li>
+            <li>½ cup packed brown sugar</li>
+            <li>4 tablespoons vinegar</li>
+            <li>2 teaspoons dried oregano</li>
+            <li>2 teaspoons Worcestershire sauce</li>
+            <li>1 dash hot sauce</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 400 degrees F (200 degrees C).</li>
+            <li>Season ribs with salt and pepper. Place in a shallow baking pan. Brown in oven 15 minutes. Turn over, and brown another 15 minutes; drain fat.</li>
+            <li>In a medium bowl, mix together the ketchup, chili sauce, brown sugar, vinegar, oregano, Worcestershire sauce, hot sauce, and salt and pepper. Place ribs in slow cooker. Pour sauce over ribs, and turn to coat.</li>
+            <li>Cover, and cook on Low 6 to 8 hours, or until ribs are tender.</li>
+        </ol>
+    </div>
+    <footer>
+        <a href="#top">Go to top</a>
+        <a href="index.html">Go to homepage</a>
+    </footer>
 </body>
 </html>
