--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <h1 id="top">Recipes</h1>
-    <a href="homemade-burgers.html">Homemade Burgers</a>
-    <a href="bbq-ribs.html">BBQ Ribs</a>
-    <a href="banana-bread.html">Banana Bread</a>
+    <h1 class="recipe-page-name-text" id="top">Recipes</h1>
+    <div class="recipe-container">
+        <div class="button-container">
+            <a href="homemade-burgers.html"><button>Homemade Burgers</button></a>
+            <a href="bbq-ribs.html"><button>BBQ Ribs</button></a>
+            <a href="banana-bread.html"><button>Banana Bread</button></a>
+        </div>
+    </div>
 </body>
 </html>
